build_errors2.txt

C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:124: error: cannot find symbol
        driver.a().whileHeld(
                  ^
  symbol:   method whileHeld(org.firstinspires.ftc.teamcode.commands.AlignToTagCommand)
  location: class org.areslib.command.button.Trigger
> Task :compileJava FAILED
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:129: error: cannot find symbol
        operator.dpadUp().whenPressed(
                         ^
  symbol:   method whenPressed(org.firstinspires.ftc.teamcode.commands.ElevatorToPositionCommand)
  location: class org.areslib.command.button.Trigger
C:\Users\david\dev\robotics\ftc\ARESLib2\src\main\java\org\firstinspires\ftc\teamcode\teleop\MainTeleOp.java:134: error: cannot find symbol
        operator.dpadDown().whenPressed(
                           ^
  symbol:   method whenPressed(org.firstinspires.ftc.teamcode.commands.ElevatorToPositionCommand)
  location: class org.areslib.command.button.Trigger
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
1 actionable task: 1 executed
